# aiconfigurator

./: one_disagg_run.yaml
network_backend/: CMakeLists.txt  toy_network_backend.cpp
network_backend/astra-network-analytical/: .gitignore  CMakeLists.txt
network_backend/astra-network-analytical/common/event-queue/: EventQueue.cpp
network_backend/astra-network-analytical/congestion_aware/: example.cpp  simulation_pybindings.cpp
network_backend/astra-network-analytical/congestion_aware/network/: Chunk.cpp  Device.cpp
network_backend/astra-network-analytical/congestion_aware/topology/: Topology.cpp
network_backend/astra-network-analytical/congestion_unaware/: example.cpp  simulation_pybindings.cpp
network_backend/astra-network-analytical/include/astra-network-analytical/common/: EventQueue.h  Type.h
network_backend/astra-network-analytical/include/astra-network-analytical/congestion_aware/: Chunk.h  Topology.h
network_backend/astra-network-analytical/input/: Ring-GenA.yml  Ring.yml
src/aiconfigurator/cli/: main.py
src/aiconfigurator/cli/exps/: hetero_disagg.yaml
src/aiconfigurator/sdk/: astrasim_utils.py  common.py  config.py  inference_session.py  inference_summary.py  models.py  operations.py  pareto_analysis.py  perf_database.py  task.py  test_network_sim.py  test_run_disagg.py  utils.py
src/aiconfigurator/sdk/backends/: base_backend.py  sglang_backend.py  trtllm_backend.py  vllm_backend.py
tests/unit/sdk/: test_inference_session.py
tests/unit/sdk/models/: test_agg_disagg_afd.py  test_moe_afd_disagg.py
tools/: afd_disagg_study.py  afd_replica_study.py  afd_study_32gpu.py  afd_study_architecture.ipynb  demo_network_in_inference_session.py  disagg_mixed_arch_experiment.py  plot_32gpu_comparison.py  plot_8gpu_comparison.py  plot_8gpu_comparison_long_context.py  plot_network_impact.py  system_param_sweep.py  test_afd_pipeline.py  test_gpu_assignment.ipynb  test_inference_session.py  test_kv_cache_isl_placement.py  test_kv_cache_overhead.py  test_multi_tier_topology.py  ttft_study.py
